# Herb-Hermes

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/raw/方書/: README.md  manifest_方書.csv  manifest_方書.json
data/raw/方書/書籍/三因極一病證方論/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  index.txt  menu.txt
data/raw/方書/書籍/世醫得效方/: 1.txt  10.txt  (+24 more)
data/raw/本草/: README.md  manifest_本草.csv  manifest_本草.json
docs/: agent.md  architecture.md  dosage_roles.md  genealogy.md  minimax.md  roadmap.md  voice.md
frontend/: app.js  index.html  styles.css
herb_hermes/: __init__.py  cli.py  config.py  index_build.py  mcp_server.py  models.py  report.py  store.py
herb_hermes/api/: __init__.py  server.py
herb_hermes/corpus/: __init__.py  formula_loader.py  loader.py  parser.py
herb_hermes/discovery/: __init__.py  cooccurrence.py  hypothesis.py  sourcing.py
herb_hermes/formula_analysis/: __init__.py  analyzer.py  dosage.py  roles.py
herb_hermes/genealogy/: __init__.py  genealogy.py
herb_hermes/kg/: __init__.py  graph.py
herb_hermes/llm/: __init__.py  agent.py  client.py  tools.py
herb_hermes/normalize/: __init__.py  aliases.py  normalizer.py
herb_hermes/retrieval/: __init__.py  bm25.py  tokenizer.py
herb_hermes/voice/: __init__.py  asr.py  service.py  tts.py
notebooks/: HerbHermes_Voice_Server.ipynb
scripts/: demo_osteoporosis.py
tests/: conftest.py  test_agent.py  test_analysis.py  test_components.py  test_formula.py  test_parser.py  test_pipeline.py
(+2374 files in other folders)
