[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "herb-hermes"
version = "0.1.0"
description = "本草—方剂—机制—发现 证据操作系统 (MVP): classical materia-medica sourcing, herb knowledge base, citation-tracked retrieval, herb-pair mining and research-hypothesis cards."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Herb-Hermes" }]
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
llm = ["litellm>=1.40"]
mcp = ["mcp[cli]>=1.2"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
herb-hermes = "herb_hermes.cli:main"

[tool.setuptools.packages.find]
include = ["herb_hermes*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
